{{$NEXT}}

    - Fix bug in Facets for TodoDiag

1.302091  2017-08-08 19:50:55-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add 'new_root' constructor for formatters
    - Add intercept_deep() to the API
    - Fix bug in Version event
    - Add 'number' attribute to assertion facet

1.302090  2017-07-09 21:10:08-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test that unintentionally required Test2::Suite

1.302089  2017-07-09 20:51:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix plan in buffered subtest so that the facts say it is buffered

1.302088  2017-06-28 21:55:21-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix tests on perl 5.25+ with newer Data::Dumper

1.302087  2017-06-26 20:32:21-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Introduce 'Facets' for events
    - Performance enhancements
    - Upgrade inline HashBase
    - Move Test2::Util::Trace to Test2::EventFacet::Trace
    - Track hub id in Trace
    - Remove Info event
    - Add Pass and Fail events
    - Remove Event JSON interface

1.302086  2017-06-20 10:43:13-07:00 America/Los_Angeles

    - Make it possible to turn off result logging in Test::Builder

1.302085  2017-05-01 19:24:37-07:00 America/Los_Angeles

    - No Changes since last TRIAL

1.302084  2017-04-29 20:42:48-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Better IO management
    - Allow access to the STDERR/STDOUT Test2::API uses
    - Formatters should use the Test2::API handles

1.302083  2017-04-14 10:55:26-07:00 America/Los_Angeles

    - Update some breakage info for Test::More::Prefix and Test::DBIx::Class::Schema

1.302082  2017-04-11 12:56:24-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test that incorrectly called private function as method

1.302081  2017-04-06 10:39:37-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix threads timeout for older perls (as best we can)

1.302080  2017-04-04 20:24:55-07:00 America/Los_Angeles (TRIAL RELEASE)
